Added machine history modal

--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -413,14 +413,16 @@
     <script>
       document.addEventListener('DOMContentLoaded', function() {
        $('#addMachineHistoryModal').on('shown.bs.modal', function() {
+           console.log("setting up event listener for suggestions");
            var locationInput = document.getElementById('locationInput');
            var suggestionsBox = document.getElementById('locationSuggestions');
 
            if (locationInput) {
                locationInput.addEventListener('input', function() {
                    var searchTerm = this.value;
-
+                   console.log("value: " + value)
                    if (searchTerm.length > 1) {
+                       console.log("value>1");
                        fetch(`location_suggestions.php?search=${searchTerm}`)
                            .then(response => response.json())
                            .then(data => {
