--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -119,7 +119,7 @@
                        if (locationInput) {
                            locationInput.addEventListener('input', function() {
                                var searchTerm = this.value;
-                               console.log("value: " + value)
+                               console.log("value: " + this.value)
                                if (searchTerm.length > 1) {
                                    console.log("value>1");
                                    fetch(`location_suggestions.php?search=${searchTerm}`)
