updated add machines

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -63,10 +63,13 @@
                                             <select class="form-control form-control-user-dropdown" id="genre" name="genre">
                                                 <option value="">Genre</option>
                                                 <option value="Shooter">Shooter</option>
-                                                <option value="Ticket">Ticket</option>
-                                                <option value="Prize">Prize</option>
                                                 <option value="Racing">Racing</option>
-                                                <option value="Fighting">Fighting</option>
+                                                <option value="Fighter">Fighter</option>
+                                                <option value="Sports">Sports</option>
+                                                <option value="Moving">Moving</option>
+                                                <option value="VR">VR</option>
+                                                <option value="7 Ft">7 Ft</option>
+                                                <option value="8 Ft">8 Ft</option>
                                             </select>
                                         </div>
 
