--- a/Dashboard/get_machines_all.html
+++ b/Dashboard/get_machines_all.html
@@ -130,9 +130,11 @@
                                                var suggestion = document.createElement('div');
                                                suggestion.textContent = location.Name;
                                                suggestion.classList.add('suggestion');
+                                               suggestion.value = location.LocationID;
                                                suggestion.addEventListener('click', function() {
                                                    locationInput.value = this.textContent;
                                                    suggestionsBox.innerHTML = '';
+                                                   locationInput.value = this.value;
                                                });
                                                suggestionsBox.appendChild(suggestion);
                                            });
