--- a/Dashboard/add_machine_history_modal.html
+++ b/Dashboard/add_machine_history_modal.html
@@ -14,6 +14,8 @@
           <div class="form-group">
               <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Location (Required)" required>
               <div id="locationSuggestions" class="suggestions-box"></div>
+              <input type="hidden" id="locationIDInput" name="location_id" value="">
+              <input type="hidden" id="machineIDInput" name="machine_id" value="">
           </div>
 
           <div class="form-group">
