--- a/Dashboard/add_machine_history_modal.html
+++ b/Dashboard/add_machine_history_modal.html
@@ -10,10 +10,10 @@
       </div>
       <div class="modal-body">
         <form class="user" id="addMachineHistoryForm" action="add_machine_history.php" method="post">
-          <input type="hidden" id="machine_id" name="machine_id">
+          <input type="hidden" id="locationIDInput" name="locationIDInput">
+          <input type="hidden" id="machineIDInput" name="machineIDInput">
           <div class="form-group">
-              <input type="hidden" id="locationIDInput" name="locationIDInput" value="">
-              <input type="hidden" id="machineIDInput" name="machineIDInput" value="">
+
               <input type="text" class="form-control form-control-user" id="locationInput" placeholder="Location (Required)" required>
               <div id="locationSuggestions" class="suggestions-box"></div>
 
