updated add machine field

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -84,7 +84,7 @@
                                             <input type="text" class="form-control form-control-user" id="serial_number" name="serial_number" placeholder="Serial_Number">
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control-user" id="legacy_id" name="legacy_id" placeholder="Legacy_ID">
+                                            <input type="text" class="form-control form-control-user" id="legacy_id" name="legacy_id" placeholder="Legacy_ID (Required)" required>
                                         </div>
 
                                         <div class="form-group">
