--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -42,7 +42,7 @@
                                         <h1 class="h4 text-gray-900 mb-4">Add a Machine</h1>
                                     </div>
                                     <form class="user" action="add_machine.php" method="post">
-                                        <input type="hidden" id="location_id" name="location_id">
+                                        <input type="text" id="location_id" name="location_id">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user" id="name" name="name" placeholder="Game Name (Required)" required>
                                         </div>
