added location to add machine form

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -168,7 +168,7 @@
                             suggestion.addEventListener('click', function() {
                                 locationInput.value = this.textContent;
                                 suggestionsBox.innerHTML = '';
-                                locationID.value = this.value;
+                                locationID.value = 5;
                             });
                             suggestionsBox.appendChild(suggestion);
                         });
