--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -164,7 +164,7 @@
                         data.forEach(location => {
                             var suggestion = document.createElement('div');
                             suggestion.textContent = location.Name;
-                            suggestion.name = location.Name;
+                            suggestion.name = location.LocationID;
                             suggestion.classList.add('suggestion');
                             suggestion.addEventListener('click', function() {
                                 locationInput.value = this.textContent;
