added location to add machine form

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -149,9 +149,7 @@
 
     </div>
 
-    <script src="./js/location_suggestions.js">
-    
-    </script>
+    <script src="./js/location_suggestions.js"></script>
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
