--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -130,7 +130,7 @@
                                         </div>
 
                                         <div class="form-group">
-                                            <b>Start Date (Required):</b>
+                                            <b>Start Date</b>
                                             <input type="date" class="form-control form-control-user" id="start_date" name="start_date" placeholder="Start Date">
                                         </div>
 
