made start date for location history not mandatory

--- a/Dashboard/add_machine.html
+++ b/Dashboard/add_machine.html
@@ -69,6 +69,9 @@
                                                 <option value="Sports">Sports</option>
                                                 <option value="Moving">Moving</option>
                                                 <option value="VR">VR</option>
+                                                <option value="Arcade">Arcade</option>
+                                                <option value="Rhythm">Rhythm</option>
+                                                <option value="NA">NA</option>
                                                 <option value="7 Ft">7 Ft</option>
                                                 <option value="8 Ft">8 Ft</option>
                                             </select>
