--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -136,15 +136,37 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div class="dropdown no-arrow">
+                                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                                </a>
+                                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                                     aria-labelledby="dropdownMenuLink">
+                                                    <div class="dropdown-header">Edit or Remove:</div>
+                                                    <a class="dropdown-item" href="#" data-location-id="${location.LocationID}">Edit</a>
+                                                    <a class="dropdown-item" href="#" location-machine-id="${machine.MachineID}">Set/Change Location</a>
+                                                    <div class="dropdown-divider"></div>
+                                                    <a class="dropdown-item" href="#">Create Maintenance Report</a>
+                                                </div>
+                                            </div>
                                         `;
-                                        // Add Edit button to each location
-                                        const editButton = document.createElement('button');
-                                        editButton.textContent = 'Edit';
-                                        editButton.className = 'btn btn-warning btn-edit';
-                                        editButton.onclick = function() { openEditModal(location); };
-                                        locationDiv.appendChild(editButton);
-
                                         locationsContainer.appendChild(locationDiv);
+                                    });
+
+                                    data.forEach(machine => {
+                                        const editButton = document.querySelector(`[data-location-id="${machine.MachineID}"]`);
+                                        if (editButton) {
+                                            editButton.addEventListener('click', function(event) {
+                                                event.preventDefault();
+                                                const machineId = this.getAttribute('data-location-id');
+                                                const selectedMachine = data.find(m => m.MachineID === machineId);
+                                                console.log("machineid: " + selectedMachine)
+                                                if (selectedMachine) {
+                                                    openEditModal(selectedMachine);
+                                                }
+                                            });
+                                        }
                                     });
                                 })
                                 .catch(error => {
