changing locations edit

--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -162,7 +162,7 @@
                                                 const selectedLocation = data.find(m => m.LocationID === locationId);
                                                 console.log("locationID: " + selectedLocation)
                                                 if (selectedLocation) {
-                                                    openEditModal(selectedLocation);
+                                                    openEditModal(location);
                                                 }
                                             });
                                         }
