--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -153,20 +153,20 @@
                                         locationsContainer.appendChild(locationDiv);
                                     });
 
-                                    data.forEach(location => {
+                                    /*data.forEach(location => {
                                         const editButton = document.querySelector(`[data-location-id="${location.LocationID}"]`);
                                         if (editButton) {
                                             editButton.addEventListener('click', function(event) {
                                                 event.preventDefault();
                                                 const locationId = this.getAttribute('data-location-id');
                                                 const selectedLocation = data.find(m => m.LocationID === locationId);
-                                                console.log("locationID: " + selectedLocation)
+                                                console.log("location: " + location)
                                                 if (selectedLocation) {
                                                     openEditModal(location);
                                                 }
                                             });
                                         }
-                                    });
+                                    });*/
                                 })
                                 .catch(error => {
                                     console.error('Error fetching locations:', error);
