--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -144,7 +144,7 @@
                                                 <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                                                      aria-labelledby="dropdownMenuLink">
                                                     <div class="dropdown-header">Edit</div>
-                                                    <a class="dropdown-item" href="#" data-location-id="${location.LocationID}">Edit</a>
+                                                    <a class="dropdown-item" href="#" onclick="openEditModal(${location})" data-location-id="${location.LocationID}">Edit</a>
 
                                                     <div class="dropdown-divider"></div>
                                                 </div>
