--- a/Dashboard/Edmonton_Locations.html
+++ b/Dashboard/Edmonton_Locations.html
@@ -145,8 +145,9 @@
                                                      aria-labelledby="dropdownMenuLink">
                                                     <div class="dropdown-header">Edit</div>
                                                     <a class="dropdown-item" href="#" data-location-id="${location.LocationID}">Edit</a>
-
+                                                    <a class="dropdown-item" href="#">Delete (not working yet)</a>
                                                     <div class="dropdown-divider"></div>
+                                                    <a class="dropdown-item" href="#">Games List</a>
                                                 </div>
                                             </div>
                                         `;
@@ -154,7 +155,7 @@
                                         const editButton = document.querySelector(`[data-location-id="${location.LocationID}"]`);
                                         editButton.onclick= function() { openEditModal(location); };
 
-                                    });  
+                                    });
                                 })
                                 .catch(error => {
                                     console.error('Error fetching locations:', error);
@@ -225,11 +226,7 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
 
-    <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
     <script>
       window.onload = function() {
       fetchLocations();
